# delivery

./: .env  .env.example  .gitignore  .golangci.yml  .mockery.yaml  Dockerfile  README.md  alembic.ini  go.mod  go.sum  makefile  pyproject.toml
api/: main.py
api/adapters/http/: health.py  router.py
api/proto/: basket_events.proto
cmd/: closer.go  composition_root.go  config.go
cmd/app/: main.go
config/: config.py
core/domain/model/kernel/: location.py
infrastructure/adapters/postgres/alembic/: env.py
internal/core/application/usecases/commands/: create_courier.go
internal/core/domain/kernel/: location.go  location_test.go
internal/pkg/errs/: not_found.go  value_is_invalid.go  value_is_out_of_range.go  value_is_required.go  value_must_be_greater_or_equal.go  value_must_be_greater_than.go  value_must_be_less_or_equal.go  value_must_be_less_than.go
internal/pkg/mapping/: copy.go
internal/pkg/must/: not_nil.go
internal/pkg/outbox/: event_registry.go
pkg/constructor/: must.go
tests/unit/domain/: test_location.py
